# OpenGL-Learning

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.txt
res/shaders/: Basic.shader
src/: CMakeLists.txt  ProjectConfig.h.in
src/Linmath/: CMakeLists.txt
src/Logger/: logger.cpp  logger.h
src/MyApp/: CMakeLists.txt  main.cpp
src/indexBuffer/: CMakeLists.txt  IndexBuffer.cpp  IndexBuffer.h
src/renderer/: CMakeLists.txt  Renderer.cpp  Renderer.h
src/shader/: CMakeLists.txt  Shader.cpp  Shader.h
src/tests/: CMakeLists.txt  Test.cpp  Test.h  TestClearColor.cpp  TestClearColor.h  TestTexture2D.cpp  TestTexture2D.h
src/texture/: CMakeLists.txt  Texture.cpp  Texture.h
src/vertexArray/: CMakeLists.txt  VertexArray.cpp  VertexArray.h
src/vertexBuffer/: CMakeLists.txt  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h
